aplicando partials y modulado

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "server": "nodemon --watch app.js"
   },
